# TestRestApi

./: .env.example  Cargo.toml  Makefile  build.rs
src/: lib.rs  main.rs
src/image/: image.rs  mod.rs
src/image/transformation/: mod.rs  opencv_resize.cpp
src/server/: api_error.rs  extractor.rs  image.rs  mod.rs  routes.rs  store.rs
