[package]
name = "image_api"
version = "0.1.0"
authors = ["sne"]
edition = "2018"
build = "build.rs"

[dependencies]


serde = "1.0"

dotenv = "0.11"
log = "0.4"
env_logger = "0.6"

actix-multipart = "0.2"
actix-rt = "1.0"
actix-web = { version = "2.0", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }

futures = "0.3"
base64 = "0.12"

failure = "0.1"

ctrlc = {version = "3.1", features = ["termination"] }

immeta = "0.4"

async-trait ="0.1.30"

[profile.release]
panic = 'abort'
